# ChangeLog for x11-libs/libnotify
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/libnotify/ChangeLog,v 1.43 2008/11/23 02:36:58 leio Exp $

  23 Nov 2008; Mart Raudsepp <leio@gentoo.org> libnotify-0.4.5.ebuild:
  Fix dbus-glib requirement per configure.ac

*libnotify-0.4.5 (20 Nov 2008)

  20 Nov 2008; Doug Goldstein <cardoe@gentoo.org> +libnotify-0.4.5.ebuild:
  bug fix release from upstream. adds GtkStatusIcon support

  23 Jun 2008; Samuli Suominen <drac@gentoo.org> libnotify-0.4.4.ebuild:
  Because repoman ci is broken commit to fix notification-daemon-xfce
  category failed without error message. Thanks to Mr. Bones.

  14 Dec 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  -libnotify-0.4.3.ebuild:
  prune unused versions

  01 Aug 2007; Samuli Suominen <drac@gentoo.org> libnotify-0.4.3.ebuild,
  libnotify-0.4.4.ebuild:
  Fix fscked up dbus deps for bug 187369.

  15 Jul 2007; nixnut <nixnut@gentoo.org> libnotify-0.4.4.ebuild:
  Stable on ppc wrt bug 184615

  13 Jul 2007; Raúl Porcel <armin76@gentoo.org> libnotify-0.4.4.ebuild:
  alpha/ia64 stable wrt #184615

  13 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  libnotify-0.4.4.ebuild:
  Stable on amd64/x86 wrt bug #184615.

  12 Jul 2007; Jeroen Roovers <jer@gentoo.org> libnotify-0.4.4.ebuild:
  Stable for HPPA (bug #184615).

  12 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  libnotify-0.4.4.ebuild:
  Stable on sparc wrt #184615

  12 Jul 2007; Markus Rothe <corsair@gentoo.org> libnotify-0.4.4.ebuild:
  Stable on ppc64; bug #184615

  08 Jul 2007; Michael Sterrett <mr_bones_@gentoo.org>
  libnotify-0.4.3.ebuild, libnotify-0.4.4.ebuild:
  remove reference to old, removed dbus (bug #183696)

  26 May 2007; Samuli Suominen <drac@gentoo.org> libnotify-0.4.3.ebuild,
  libnotify-0.4.4.ebuild:
  Add notification-daemon-xfce as second alternative to notification-daemon.

*libnotify-0.4.4 (28 Feb 2007)
