@@ -2,5 +2,5 @@ DIST libnotify-0.4.4.tar.gz 395528 RMD160 d5f1a2b63b98dc4abcd521b625ff5e7c206741
 DIST libnotify-0.4.5.tar.gz 364142 RMD160 6ddf4feb50504012c5f5fd205123d9f27cb12ef6 SHA1 e0a3be6249978ae2eb18bb77cdd22763271dc904 SHA256 0799db8ea1500b65a477421a8c930cc8c8b0bbc0596e55ea1601e2542f3fb0d9
 EBUILD libnotify-0.4.4.ebuild 873 RMD160 f064b26160f0f39941a3b306f2b47023bf5ba11e SHA1 8606e45bac81e84be002c322fd367dcc8b4c5338 SHA256 3f69cfbdae3c58443d6fa50a7fce3cd6af46051286ee72fc4b34370a7cfe133c
 EBUILD libnotify-0.4.5.ebuild 849 RMD160 e737177350a51ae83486ebef7626d04d87fc2346 SHA1 6ed6a09b125a33346c0688366612d2e98fd45fff SHA256 74844a631abbd8ef68f6bcb63f3f0399f9eacf9e9ebab000288e963d599998c0
-MISC ChangeLog 5563 RMD160 0604f59b979e1552be49dba07a7402f68403b5b8 SHA1 468d1e718b5963a59c6c197102858369ee8bf006 SHA256 77f5d78d114487c66ba0f7bb752dad0907427b728a837d7d8be3a99313dc1d83
-MISC metadata.xml 309 RMD160 41a011e8c4aa3b21a2dd17d07d4169816141fb8a SHA1 49d26a613994ed1e423d9200bf3b66592c0760c5 SHA256 37dfe8555749481a6f02759a7ad6c2961e71283013c9c9be94f57aa6e1358bfb
+MISC ChangeLog 5683 RMD160 8632c344267d5980833cdc3dd33d4cce4786a18d SHA1 208fb3c6b344ad05098e706a1f43990a1568e73a SHA256 6fc5092b594392ac915c444f6b3e520a8dc49a58d7205b50f081a11277321029
+MISC metadata.xml 165 RMD160 f8f7dd761c5475651b8e04512e4f3dd043c41984 SHA1 47939c027699c5810cd3f25b4698719e9bd183d2 SHA256 dc2ad50713441100082e32ba283e9dd807b8fc46f69a5b9221fb9b89064deb31
