@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libnotify
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/libnotify/ChangeLog,v 1.43 2008/11/23 02:36:58 leio Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/libnotify/ChangeLog,v 1.44 2009/01/15 21:53:05 loki_val Exp $
+
+  15 Jan 2009; Peter Alfredsen <loki_val@gentoo.org> metadata.xml:
+  Freedesktop gets libnotify, compnerd retired.
 
   23 Nov 2008; Mart Raudsepp <leio@gentoo.org> libnotify-0.4.5.ebuild:
   Fix dbus-glib requirement per configure.ac
